--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.ssl.enabled: true
+server.ssl.enabled: false
 server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
@@ -6,7 +6,7 @@ server.ssl.key-alias: openvidu-selfsigned
 
 spring.datasource.url=jdbc:mysql://localhost:3306/full_teaching?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=pass
 
 spring.datasource.platform=mysql
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
